# agent-service-code-review

./: .env.example  .gitignore  README.md  agent_spec.md  pyproject.toml
agent/: agent.py  main.py
resolve_issue/: agent.py  main.py
tools/: bash_tool.py  grep_tool.py  logger.py
