[project]
name = "patched-adk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "eml-parser>=2.0.0",
    "google-adk>=1.0.0",
    "litellm>=1.68.0",
    "psycopg[binary]>=3.2.9",
    "python-magic>=0.4.27",
    "sqlalchemy>=2.0.40",
]

[project.scripts]
code-review = "example_agents.code_review.main:run"
resolve-issue = "example_agents.resolve_issue.main:run"
expand-issue = "example_agents.expand_issue.main:run"
autofix = "example_agents.autofix.main:run"
bundle = "patched_adk.utils.bundle:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["patched_adk", "example_agents"]

[dependency-groups]
dev = [
    "ruff>=0.11.12",
]
